--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,8 +9,11 @@
     <color name="background">#FF48806D</color>
     <color name="white">#FFFFFFFF</color>
     <color name="foregroundElement">#CEEDD6</color>
-    <color name="buttonColor">#FFCAD1C5</color>
-    <color name="topbarcolor">#FF2F3D46</color>
-    <color name="tobatDelete">#FF3F4044</color>
-    <color name="darkorange">#FFFF8B00</color>
+    <color name="colorLightBlue">#FFC2F0FF</color>
+    <color name="colorPiiink">#FFFFD1C2</color>
+    <color name="colorLightGreen">#FFC7F0BD</color>
+    <color name="titleWhite">#FFE6F0EA</color>
+    <color name="colorBlack">#FF000000</color>
+    <color name="colorBlackGrey">#FF494646</color>
+    <color name="colorgreen">#FF388659</color>
 </resources>
