--- a/app/src/main/res/values/splash.xml
+++ b/app/src/main/res/values/splash.xml
@@ -2,7 +2,7 @@
 <resources>
     
     <style name="Theme.BeerItUpCompose.Starting" parent="Theme.SplashScreen">
-        <item name="windowSplashScreenBackground">#1780B4</item>
+        <item name="windowSplashScreenBackground">@color/ic_launcher_background</item>
         <item name="windowSplashScreenAnimatedIcon">@mipmap/ic_launcher_foreground</item>
         <item name="postSplashScreenTheme">@style/Theme.BeerItUpCompose</item>
     </style>
